Refactor tests class to fit new requirements